[tool.poetry]
name = "bgg4py"
version = "0.0.1"
description = ""
readme = "README.md"
repository = "https://github.com/hiroaqii/bgg4py"
authors = ["hiroaqii <hiroaqii@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.1.2"
pydantic = "^1.5.1"
requests = "^2.23.0"
xmltodict = "^0.12.0"
devtools = "^0.5.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^19.10b0"
flake8 = "^3.8.2"

[tool.black]
line-length = 120
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
